Fix and improve back to top visibility, change document ready to official WordPress twentyfifteen standard

--- a/sass/base/_structure.scss
+++ b/sass/base/_structure.scss
@@ -438,12 +438,12 @@ pre {
 	}
 
 	&.fade-out { // If the user keeps scrolling down, the button is out of focus and becomes less visible
-		opacity: .5;
-	}
+		opacity: .3;
 
-  &.fade-out-completely {
-    opacity: 0;
-  }
+    &:hover {
+      opacity: 1;
+    }
+	}
 
 	.no-touch &:hover {
 		opacity: 1;
